# usvctl_testing

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: create-release.yml  test-on-pull-request.yml
templates/: rule01.json  task01.json
usvctl/: error_handling_typer.py  exceptions.py  main.py
usvctl/commands/: create.py  delete.py  get.py  update.py
usvctl/commands/models/: jobs.py  rules.py  tasks.py
